--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://device-data-api-database.cxxcnqokwhrh.us-east-1.rds.amazonaws.com:3306/device-data-api-db?useSSL=false&allowPublicKeyRetrieval=true&autoReconnect=true
+spring.datasource.url=jdbc:mysql://device-data-api-database.cxxcnqokwhrh.us-east-1.rds.amazonaws.com:3306/device_data_api_db?useSSL=false&allowPublicKeyRetrieval=true&autoReconnect=true
 spring.datasource.username=admin
 spring.datasource.password=bUUxBiEQ8ii8BulNCGAL
 spring.jpa.hibernate.ddl-auto=update
