--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,8 @@ spring.datasource.url=jdbc:mysql://127.0.0.1:3306/device-data-api-db
 spring.datasource.username=root
 spring.datasource.password=password
 spring.jpa.hibernate.ddl-auto=update
+# Redis Config
+spring.cache.type=redis
+spring.data.redis.host=127.0.0.1
+spring.data.redis.port=6379
+spring.main.allow-bean-definition-overriding=true
